[gd_scene load_steps=2 format=3 uid="uid://cardgameroom"]

[ext_resource type="Script" path="res://scripts/CardGameRoom.gd" id="1_cardgameroom"]

[node name="CardGameRoom" type="Control" groups=["game_room"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_cardgameroom")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="PlayArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 0.75
offset_bottom = -50.0

[node name="PlayAreaBorder" type="ColorRect" parent="PlayArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="PlayedCardsContainer" type="Control" parent="PlayArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="HandArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -400.0

[node name="HandBackground" type="ColorRect" parent="HandArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="HandCardsContainer" type="HBoxContainer" parent="HandArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
alignment = 1

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBar" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0

[node name="RoomInfo" type="Label" parent="UI/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "卡牌游戏房间"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = -20.0
text = "返回大厅"

[connection signal="pressed" from="UI/BackButton" to="." method="_on_back_button_pressed"]